{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "MainMenu",
            "id": "065c0fff-8f48-49c2-9aff-c004418e6b29",
            "actions": [
                {
                    "name": "MoveSelection",
                    "type": "Value",
                    "id": "236c9915-4593-4991-853e-5e3b2e37c995",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ConfirmSelection",
                    "type": "Button",
                    "id": "08381c4f-a1dd-44fc-9cbf-dc4657974772",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4baf4311-b862-46e6-adcd-048e53ae8990",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ConfirmSelection",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "06b5b3b9-2244-4e16-80b5-898b1736035f",
                    "path": "<Keyboard>/numpadEnter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ConfirmSelection",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "496404ae-1c0b-4d27-ad4f-b2da85fd747c",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveSelection",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "8e446c54-9513-4361-9711-e22a6f29239b",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveSelection",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "efaca9dd-1509-40a0-925f-cccb3baa90f0",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveSelection",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "a1222dc9-3c5d-40c5-9001-e9b02218dfa6",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveSelection",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "9baf817f-0cda-48ce-a593-ca4c6c08c613",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveSelection",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "PlayerActions",
            "id": "2b061438-2414-4383-9ba8-11bf65ce8f4c",
            "actions": [
                {
                    "name": "MoveHorizontal",
                    "type": "Value",
                    "id": "ca64350b-e1d7-4ee3-b4c7-0048fe6f1c12",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "5480a470-ebaf-49ae-abdc-4ea20f0e90e3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "ADHorizontal",
                    "id": "4ec53511-4ee9-46c3-85b9-bd0bdeeb6196",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveHorizontal",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "da882df6-26c0-4be0-bd55-167ef7511fdb",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveHorizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "70d6d781-94d3-45b9-bbe7-4e61be1dc319",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveHorizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "ArrowsHorizontal",
                    "id": "47948a09-854c-45f8-9391-fd2c58b7a70e",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveHorizontal",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "abf44755-2c5c-4adf-83c2-a24aaa2ee64c",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveHorizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "c17898d6-a61c-4397-8e91-f9f1262f163b",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveHorizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "2e0c7049-bac6-4340-82cc-f9d65316cf3a",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9c810d0a-fadf-4c8e-abba-dadb74e85906",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6758a7f1-2774-4062-9894-ebcb730b6c79",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}